--- a/Dockerfile.arm64
+++ b/Dockerfile.arm64
@@ -3,7 +3,7 @@ FROM golang:1.16-alpine as builder
 WORKDIR /go/src/drone-teams
 COPY . .
 
-RUN GOOS=linux GOARCH=arm GOARM=7 CGO_ENABLED=0 go build -a -tags netgo -o drone-teams ./cmd/drone-teams
+RUN GOOS=linux GOARCH=arm64 CGO_ENABLED=0 go build -a -tags netgo -o drone-teams ./cmd/drone-teams
 
 FROM alpine:3.13
 
